<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="General">
		<ListPreference
			android:defaultValue="@string/pref_list_temperature_unit_value_and_title_celsius"
			android:entries="@array/pref_list_temperature_unit_names"
			android:entryValues="@array/pref_list_temperature_unit"
			android:key="display.temperature_unit"
			android:summary="@string/pref_summary_temperature_unit"
			android:title="@string/pref_title_temperature_unit"/>
		<SwitchPreference
			android:defaultValue="true"
			android:key="display.show_battery_animation"
			android:title="@string/pref_title_show_battery_animation"
			android:summaryOn="@string/pref_summary_on_show_battery_animation"
			android:summaryOff="@string/pref_summary_off_show_battery_animation"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="Statistics">
		<ListPreference
			android:defaultValue="@string/pref_list_batteryestimationmethod_value_lastnchangeestimate"
			android:entries="@array/pref_list_batteryestimationmethod_names"
			android:entryValues="@array/pref_list_batteryestimationmethod_values"
			android:key="batstatistics.usedestimator"
			android:summary="@string/pref_summary_change_batteryestimation"
			android:title="@string/pref_title_change_batteryestimation"/>

		<Preference
			android:key="batstatistics.cleardb"
			android:summary="@string/pref_summary_clearstatsdb"
			android:title="@string/pref_title_clearstatsdb"/>
	</PreferenceCategory>

</PreferenceScreen>