<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="com.halcyonwaves.apps.energize.MainActivity"
	tools:showIn="@layout/app_bar_main">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="horizontal">

			<com.halcyonwaves.apps.energize.animations.WaveView
				android:id="@+id/wave"
				android:layout_width="200dp"
				android:layout_height="200dp"
				android:layout_marginTop="32dp"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/textview_text_current_charginglvl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:text="000"
				android:textSize="35pt"
				tools:ignore="HardcodedText"/>

			<TextView
				android:id="@+id/textview_label_current_charginglvl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:text="%"
				android:textSize="20pt"
				tools:ignore="HardcodedText"/>
		</LinearLayout>

		<TextView
			android:id="@+id/textview_label_current_chargingstate"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textview_label_current_chargingstate"/>

		<TextView
			android:id="@+id/textview_text_current_chargingstate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp"/>

		<TextView
			android:id="@+id/textview_label_temperature"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textview_label_temperature"/>

		<TextView
			android:id="@+id/textview_text_temperature"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp"/>

		<TextView
			android:id="@+id/textview_label_timeonbattery"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textview_label_timeonbattery"/>

		<TextView
			android:id="@+id/textview_text_timeonbattery"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp"/>

		<TextView
			android:id="@+id/textview_label_remainingtime"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textview_label_remainingtime"/>

		<TextView
			android:id="@+id/textview_text_remainingtime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp"
			android:text="-"
			tools:ignore="HardcodedText"/>

	</LinearLayout>

</android.support.constraint.ConstraintLayout>